--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Fraction Calculator</title>
+
+    <style>
+      html {
+        overflow: hidden;
+        height: 100vh;
+    }
+
+    body {
+        height: 100vh;
+        overflow: auto;
+    }
+    </style>
   </head>
   <body>
     <x-index-page></x-index-page>
